# FunWithMath

FunWithMath/: .gitignore  LICENSE  README.md  pyproject.toml
FunWithMath/src/fun_with_math_nicomp/: fun_with_math.py
