[project]
name = "fun_with_math_nicomp"
version = "0.0.1"
authors = [
  { name="Bill Nicholson", email="DirkGentlyHHGG@gmail.com" },
]
description = "Generate math problems for students to practice"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/nicomp42/FunWithMath"
Issues = "https://github.com/nicomp42/FunWithMath/issues"